<resources>
    <string name="app_name">vitiendas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nombre Usuario</string>
    <string name="nav_header_subtitle">Usuario</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Login -->
    <string name="contrasenia">Contraseña</string>
    <string name="usuario">Nombre de usuario</string>
    <string name="ingrese_a_su_cuenta">INGRESE A SU CUENTA</string>
    <string name="iniciar_sesion">INICIAR SESION</string>

    <!-- nav menu -->
    <string name="inicio">Inicio</string>
    <string name="clientes">Clientes</string>
    <string name="caja">Caja</string>
    <string name="ventas">Ventas</string>
    <string name="pre_ventas">Pre-Ventas</string>
    <string name="mis_ventas">Mis ventas</string>
    <string name="cobros">Cobros</string>
    <string name="stock_producto">Stock de producto</string>

    <!-- Errores sign up -->
    <string name="name_error">Error nombre</string>
    <string name="email_error">Error email</string>
    <string name="email_doesnt_match">Error formato email</string>
    <string name="password_error">Error password</string>
    <string name="password_error_less_than">Password debe ser mayor de 4 caracteres</string>
    <string name="filtro">Filtro</string>
    <string name="configuracion">Configuracion</string>
    <string name="buscar">Buscar</string>
    <string name="categoria">Categoria</string>
    <string name="zona">Zona</string>
    <string name="ciudad">Ciudad</string>
    <string name="direccion">Direccion</string>

</resources>
