<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextFieldSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/buscar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditSearch"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textSize="16dp"
                android:padding="6dp"/>

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoria"/>

    <Spinner
        android:id="@+id/sp_categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ciudad"/>

    <Spinner
        android:id="@+id/sp_ciudad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zona"/>

    <Spinner
        android:id="@+id/sp_zona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/tv_button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/background_button"
        android:textColor="@android:color/white"
        android:drawableLeft="@drawable/ic_search"
        android:drawableTint="@android:color/white"
        android:text="@string/buscar"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"/>

</LinearLayout>
