<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@color/button_end">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:text="@string/ingrese_a_su_cuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="24dp"
            android:textColor="@android:color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledTextFieldUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/usuario"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:background="@drawable/background_text"
                    android:padding="6dp"/>

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextFieldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasenia"
            android:layout_marginTop="16dp"

            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditUsuarioPassword"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:textSize="16dp"
                android:inputType="textPassword"
                android:background="@drawable/background_text"
                android:drawableLeft="@drawable/ic_https"
                android:drawableTint="@color/colorAccent"
                android:padding="6dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/iniciar_sesion"
            android:textSize="16dp"
            android:background="@drawable/background_button"
            android:textColor="@android:color/white"
            android:padding="8dp"/>

    </LinearLayout>



</ScrollView>
